[package]
name = "trace_titans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93", features = ["float_roundtrip"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
